# reb-client

./: .env.example  .gitignore  README.md  SETUP.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  docs.yml  lint.yml  publish.yml  semver.yml
reb_client/http/: client.py  client.pyi
reb_or_kr_client/: __init__.py  config.py  exceptions.py
reb_or_kr_client/http/: __init__.py  base_http_client.py  client.pyi
scripts/: extract_sigs.py  semver.py
tests/: conftest.py  test_client.py
